Fix grid spacing

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ nav {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 10% 45% 45%;
     grid-gap: 2%;
-    height: 100vh;
+    height: 120vh;
     padding: 1%;
     margin-bottom: 25vh;
   }
@@ -64,6 +64,9 @@ nav {
 }
 
 /* BOXES */
+
+
+/* TOP OF BOX */
 
 .box-top {
   height: 40%;
@@ -95,6 +98,34 @@ h4 {
   background-size: cover;
 }
 
+/* BOTTOM OF BOX */
+
+.box-bottom {
+  height: 50%;
+  background-color: #F4FAFF;
+  padding: 5%;
+}
+
+.box-title {
+  font-size: 3vmin;
+  color: #4F646F;
+}
+
+.website {
+  border: solid #B7ADCF;
+  padding: 4%;
+  text-align: center;
+  margin-bottom: 4%;
+}
+
+.hotels {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+/* BOX IMAGES */
+
 .box-one {
   background-image: url(assets/amalfi.jpg);
 }
@@ -125,28 +156,4 @@ h4 {
 
 .box-eight {
   background-image: url(assets/capri.jpg);
-}
-
-.box-bottom {
-  height: 55%;
-  background-color: #F4FAFF;
-  padding: 5%;
-}
-
-.box-title {
-  font-size: 3vmin;
-  color: #4F646F;
-}
-
-.website {
-  border: solid #B7ADCF;
-  padding: 4%;
-  text-align: center;
-  margin-bottom: 4%;
-}
-
-.hotels {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
 }
